update filter event